# KrKr2-Next-no-vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  NotoSansCJK-Regular.txt  README.md  README_EN.md  build.sh  clean_distribution‌.bat  generate_icons.py  readme.txt  vcpkg.json
android_adt/: .gitignore  .project  readme.txt
android_adt/jni/: EngineFrameDesc.txt  EngineMemoryStats.txt  EngineOption.txt  crash_002.txt  egl_get_display.txt  getfield.bat
android_adt/res/layout/: activity_main.xml
android_adt/res/values/: strings.xml
android_cdt/: AndroidManifest.xml
android_cdt/jni/: Android.mk  EngineCreateDesc.txt  EngineInputEvent.txt  console.bat  crash_001.txt  crash_002_before.txt  crash_002_stack.txt  gen.bat  org_github_krkr2_flutter_engine_bridge_EngineBindings.cpp  org_github_krkr2_flutter_engine_bridge_EngineBindings.h  org_github_krkr2_flutter_engine_bridge_FlutterEngineBridgePlugin.h
apps/flutter_app/: .metadata  console.bat  pubspec.yaml
bridge/engine_api/: CMakeLists.txt
bridge/engine_api/include/: engine_api.h  engine_options.h
bridge/engine_api/src/: engine_api.cpp
bridge/flutter_engine_bridge/: .metadata  pubspec.yaml
cmake/: vcpkg_android.cmake
cpp/core/: CMakeLists.txt
cpp/core/base/: 7zArchive.cpp  CMakeLists.txt  EventIntf.cpp  KAGParser.cpp  KAGParser.h  ScriptMgnIntf.cpp  StorageIntf.cpp  StorageIntf.h  SysInitIntf.cpp  TVPMmapAlloc.h  TextStream.cpp  UtilStreams.cpp  UtilStreams.h  XP3Archive.cpp  ZIPArchive.cpp
cpp/core/base/impl/: StorageImpl.cpp  SysInitImpl.cpp  SysInitImpl.h
cpp/core/environ/: Application.cpp  CMakeLists.txt  DumpSend.cpp  EngineBootstrap.cpp  EngineBootstrap.h  EngineLoop.cpp  EngineLoop.h  MainScene.cpp  MainScene.h  XP3ArchiveRepack.cpp
cpp/core/environ/ConfigManager/: GlobalConfigManager.cpp  IndividualConfigManager.cpp  LocaleConfigManager.cpp  LocaleConfigManager.h
cpp/core/environ/android/: AndroidUtils.cpp  KrkrJniHelper.cpp  KrkrJniHelper.h
cpp/core/environ/apple/ios/: platform.mm
cpp/core/environ/apple/macos/: platform.mm
cpp/core/environ/stubs/: ui_stubs.cpp
cpp/core/environ/win32/: Platform.cpp  SystemControl.cpp  SystemControl.h  TVPWindow.h
cpp/core/movie/: CMakeLists.txt
cpp/core/movie/ffmpeg/: AEFactory.cpp  AEStreamInfo.cpp  AEUtil.cpp  AudioCodecFFmpeg.cpp  AudioCodecPassthrough.cpp  AudioDevice.cpp  CodecUtils.cpp  Demux.cpp  DemuxFFmpeg.cpp  DemuxPacket.cpp  FactoryCodec.cpp  KRMovieLayer.cpp  KRMoviePlayer.cpp  KRMoviePlayer.h  Message.cpp  MessageQueue.cpp  StreamInfo.cpp  VideoCodec.cpp  VideoCodecFFmpeg.cpp  VideoPlayer.cpp  VideoPlayerAudio.cpp  VideoPlayerVideo.cpp  VideoRenderer.cpp  krffmpeg.cpp
cpp/core/plugin/: PluginImpl.cpp  ncbind.cpp  ncbind.hpp
cpp/core/sound/: CMakeLists.txt  FFWaveDecoder.cpp  VorbisWaveDecoder.cpp  WaveIntf.cpp
cpp/core/sound/win32/: WaveImpl.cpp  WaveMixer.cpp  tvpsnd.cpp
cpp/core/tjs2/: CMakeLists.txt  tjs.cpp  tjs.h  tjsArray.cpp  tjsConfig.cpp  tjsConfig.h  tjsDictionary.cpp  tjsInterCodeExec.cpp  tjsInterCodeExec.h  tjsInterCodeGen.cpp  tjsInterCodeGen.h  tjsObject.cpp  tjsRegExp.cpp  tjsScriptBlock.cpp  tjsScriptBlock.h  tjsScriptCache.cpp  tjsScriptCache.h  tjsString.cpp  tjsString.h  tjsVariant.cpp  tjsVariant.h  tjsVariantString.cpp
cpp/core/utils/: MathAlgorithms_Default.cpp  MathAlgorithms_Default.h
cpp/core/utils/win32/: ThreadImpl.cpp  ThreadImpl.h
cpp/core/visual/: CMakeLists.txt  FontImpl.cpp  FontImpl.h  FreeType.cpp  FreeType.h  FreeTypeFontRasterizer.cpp  GraphicsLoadThread.cpp  GraphicsLoaderIntf.cpp  GraphicsLoaderIntf.h  LayerBitmapIntf.cpp  LayerIntf.cpp  LayerIntf.h  LayerManager.cpp  LoadAMV.cpp  LoadAMV.h  LoadBPG.cpp  LoadJPEG.cpp  LoadJXR.cpp  LoadPNG.cpp  LoadPVRv3.cpp  LoadTLG.cpp  RenderManager.cpp  RenderManager.h  TVPDecodeArena.h  TransIntf.cpp  WindowIntf.cpp  tvpgl.cpp
cpp/core/visual/impl/: BasicDrawDevice.cpp  BitmapBitsAlloc.cpp  DrawDevice.cpp  DrawDevice.h  DrawDeviceGLESModule.h  LayerBitmapImpl.cpp  LayerBitmapImpl.h  PassThroughDrawDevice.cpp  TVPScreen.cpp  VideoOvlImpl.cpp
cpp/core/visual/ogl/: PVRTDecompress.cpp  RenderManager_ogl.cpp  RenderManager_ogl_test.hpp  angle_backend.h  etcpak.cpp  krkr_egl_context.cpp  krkr_egl_context.h  krkr_gl.cpp  krkr_gl.h  krkr_texture2d.h  ogl_common.h
cpp/core/visual/simd/: CMakeLists.txt  tvpgl_simd_alpha_blend.cpp  tvpgl_simd_arithmetic_blend.cpp  tvpgl_simd_blur.cpp  tvpgl_simd_common.h  tvpgl_simd_const_blend.cpp  tvpgl_simd_convert.cpp  tvpgl_simd_copy.cpp  tvpgl_simd_init.cpp  tvpgl_simd_init.h  tvpgl_simd_misc.cpp  tvpgl_simd_premul_blend.cpp  tvpgl_simd_ps_blend.cpp  tvpgl_simd_ps_blend2.cpp
cpp/plugins/: CMakeLists.txt  LayerExBase.cpp  LayerExBase.h  alphamovie.cpp  drawDeviceD2DCompat.cpp  extrans.cpp  getSample.cpp  krkrgles.cpp  krkrlive2d.cpp  layerExAreaAverage.cpp  layerExBTOA.cpp  layerExBase.hpp  layerExBase_wamsoft.hpp  layerExImage.cpp  layerExLongExposure.cpp  layerExMovie.cpp  layerExRaster.cpp  saveStruct.cpp  scriptsEx.cpp  textrender.cpp  varfile.cpp  waveFilterCompat.hpp  wfBasicEffectCompat.cpp  wfTypicalDSPCompat.cpp  windowEx.cpp
cpp/plugins/fstat/: main.cpp
cpp/plugins/kagparserex/: CMakeLists.txt  kagparserex_plugin.cpp
cpp/plugins/layerex_draw/general/: DrawPath.cpp  LayerExDraw.cpp  main.cpp
cpp/plugins/motionplayer/: EmotePlayer.cpp  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  SeparateLayerAdaptor.h  main.cpp
cpp/plugins/psbfile/: CMakeLists.txt  PSBEnums.h  PSBExtension.h  PSBFile.cpp  PSBFile.h  PSBMedia.cpp  PSBMedia.h  PSBValue.cpp  PSBValue.h  main.cpp
cpp/plugins/psbfile/resources/: IResourceMetadata.h  ImageMetadata.cpp  ImageMetadata.h
cpp/plugins/psbfile/types/: ArchiveType.cpp  ImageType.cpp  MmoType.cpp  MotionType.cpp  PimgType.cpp  ScnType.cpp  SoundArchiveType.cpp
cpp/plugins/psdfile/: main.cpp  psdclass.cpp  psdclass_loadmem.cpp  psdclass_loadstream.cpp  psdclass_loadstreambase.cpp
tools/: CMakeLists.txt
tools/xp3/: CMakeLists.txt  main.cpp
vcpkg/triplets/: arm64-android.cmake  arm64-ios.cmake  x64-android.cmake
(+136 files in other folders)
